<resources>
    <string name="app_name">Dummy Sample</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment">Fragments</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="sicko_mode">Sicko Mode</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username_here">Username here</string>
    <string name="login_and_get_started">login and get Started !</string>
</resources>
