<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.chillout.sampletest.ui.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/next_action"
            app:destination="@id/navigation_dashboard"
            app:enterAnim="@anim/nav_default_pop_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="io.chillout.sampletest.ui.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <argument
            android:name="username"
            app:argType="string"
            android:defaultValue="No name given" />
        <action
            android:id="@+id/next_action"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="io.chillout.sampletest.ui.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>