<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/rounded_coners"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.navigationFragments.homeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/rainy_login"
        android:layout_height="match_parent"
        android:layout_gravity="top|center">

        <TextView
            android:id="@+id/loogo"

            android:layout_width="wrap_content"
            android:textColor="#FFC400"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/pacifico"
            android:text="@string/sicko_mode"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lol2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/pacifico"
            android:text="@string/login_and_get_started"
            android:textColor="#FFAB40"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loogo" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="112dp"
            android:background="@drawable/rounded_coners"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loogo"
            app:layout_editor_absoluteY="250dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/username_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_here"
                    android:inputType="textPersonName"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_margin="10dp"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/login_button"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:background="@drawable/button_background"

                android:fontFamily="@font/leckerli_one"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#FF5252"
                android:textSize="45sp"></TextView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>